--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "mssql": "^5.1.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "scrape-it": "^5.1.4"
   }
 }
